--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "desafio_exe",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
