--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jsdoc": "^4.0.3",
     "nodemon": "^2.0.19",
