--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
     "uuid": "^10.0.0"
   },
