--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
