--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "^8.0.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-spinners": "^0.14.1",
