--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.25.1",
     "sass": "^1.77.8",
     "uuid": "^10.0.0"
