cambios en archivos package

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "desafio_exe",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
