--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "desafio_exe",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "install-backend": "cd backend && npm install",
+    "install-frontend": "cd frontend && npm install",
+    "build-frontend": "cd frontend && npm run build",
+    "start": "cd backend && npm start"
   },
   "repository": {
     "type": "git",
