--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "desafio_exe",
   "main": "index.js",
   "scripts": {
-    "install-backend": "cd backend && npm install",
-    "install-frontend": "cd frontend && npm install",
-    "build-frontend": "cd frontend && npm run build",
-    "start": "cd backend && npm start"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "install-client": "cd client && npm install",
+    "build-client": "cd client && npm run build",
+    "render-postbuild": "npm run install-client && npm run build-client"
   },
   "repository": {
     "type": "git",
