--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
