--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
     "mysql2": "^3.10.3",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
@@ -50,6 +50,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jsdoc": "^4.0.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "supertest": "^7.0.0"
   }
