--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "jsdom": "^24.1.1",
     "vite": "^5.3.4",
+    "vite-plugin-csp": "^1.1.2",
     "vitest": "^2.0.4"
   },
   "vitest": {
