--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.16.5",
@@ -29,11 +28,13 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.25.1",
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
+    "use-sound": "^4.0.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
